# LimbusLocalizationManager

./: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml
.github/workflows/: build_test.yaml
docs/README/: it.md  ru.md
scripts/: .gitignore  localizations.toml
scripts/update_gist/: main.py  requirements.txt
scripts/update_mirror/: docker-compose.yaml  main.py  requirements.txt
src/: i18n.ts  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: default_config.toml
src-tauri/src/: lib.rs  settings.rs  steam.rs  utils.rs
src/components/error-boundary/: error-boundary.tsx
src/components/toast/: toast.module.css  toast.tsx
src/hooks/: use-actions.ts  use-app-state.ts  use-connection-status.ts  use-localizations.ts  use-play-progress.ts  use-tauri-events.ts
src/layouts/main/: main.tsx
src/locales/: en.json  es-MX.json  it-IT.json  pt-BR.json  ru-RU.json  th-TH.json  zh-Hans.json  zh-Hant.json
src/pages/about/: kim.tsx  page.module.css
src/pages/glupo/: page.tsx
src/pages/glupo-light/: gacha.module.css  gacha.tsx  index.ts  page.module.css  page.tsx  trinkets.module.css  trinkets.tsx
src/pages/glupo-shop/: armor.tsx  light.module.css  light.tsx  page.tsx  reset.tsx  risk.tsx  stats.tsx  weapons.tsx
src/pages/home/: console.tsx  log.tsx  page.tsx
src/pages/localization/: actions.tsx  page.tsx
src/pages/localizations/: page.module.css  page.tsx
src/pages/settings/: page.module.css  page.tsx
src/stores/: index.ts  models.ts
src/utils/: index.ts
(+32 files in other folders)
