[package]
name = "limbus-localization-manager"
version = "1.5.0"
description = "Limbus Localization Manager"
authors = ["kimght"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "limbus_localization_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls", "stream"] }
dirs = "5.0"
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["full"] }
zip = "2.1"
tempfile = "3.10"
log = "0.4"
tauri-plugin-dialog = "2"
toml = "0.8.20"
md-5 = "0.10.6"
futures = "0.3.31"
dashmap = "6.1.0"
sysinfo = "0.34.2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-store = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.51.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
